--- a/GE.WebAdmin/Views/ProjectSteps/DisplayTemplates/VMProjectStep.cshtml
+++ b/GE.WebAdmin/Views/ProjectSteps/DisplayTemplates/VMProjectStep.cshtml
@@ -14,6 +14,9 @@
     </div>
     <div class="panel-body">
         <p>@Model.Foreword</p>
+        <div class="text-right">
+            <a href="javascript:void(0)" data-toggle="tooltip" title="Развернуть" onclick="fillProjectStepHtml(this)" data-id="@Model.Id"><i class="fa fa-angle-double-down"></i></a>
+        </div>
     </div>
     <div class="panel-footer">
         <ul class="list-unstyles list-inline text-left">
