--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -1,42 +1,43 @@
 ﻿@model VMEditAphorism
 @{
-    var isNew = Model.Id == 0;
-    ViewBag.Title = isNew ? "Добавить афоризм" : "Редактирование афоризма";
+    var isNew = Model.Id==0;
+    ViewBag.Title = isNew ? "Добавить афоризм" : "Редактировать афоризм \"" + Model.Title + "\"";
 }
 
 <h2>@ViewBag.Title</h2>
+@if (!isNew)
+{
+    <form method="post" action="@Url.Action(MVC.Aphorisms.Delete(cat: Model.CategoryId, id: Model.Id))">
+        @Html.AntiForgeryToken()
+        <button type="submit" class="btn btn-danger pull-right">Удалить афоризм</button>
+    </form>
+}
 <br />
 <form method="post" action="@Url.Action(MVC.Aphorisms.Edit())">
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
+    @Html.HiddenFor(x => x.CategoryId)
 
-    <div class="form-group">
-        @Html.LabelFor(x => x.Category)
-        @Html.EditorFor(x => x.Category, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите категорию" } })
-        @Html.ValidationMessageFor(x => x.Category)
+    <div class="row">
+        <div class="col-md-12">
+            @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+            @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок" } })
+            @Html.ValidationMessageFor(x => x.Title)
+        </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(x => x.Author)
-        @Html.EditorFor(x => x.Author, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите автора" } })
-        @Html.ValidationMessageFor(x => x.Author)
+    <br />
+    <div class="row">
+        <div class="col-md-12">
+            @Html.LabelFor(x => x.Html, new { @class = "control-label" })
+            @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите содержание" } })
+            @Html.ValidationMessageFor(x => x.Html)
+        </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(x => x.Html)
-        @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите контент" } })
-        @Html.ValidationMessageFor(x => x.Html)
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
-        <a href="@Url.Action(MVC.Aphorisms.Index())" class="btn btn-default">Назад</a>
+    <br />
+    <div class="row">
+        <div class="col-md-12">
+            <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
+            @Html.ActionLink("Назад", MVC.Aphorisms.Index(curCat: Model.CategoryId), new { @class = "btn btn-default" })
+        </div>
     </div>
 </form>
-
-@section scripts{
-    <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
-    <script type="text/javascript">
-        if (CKEDITOR.instances['Html']) {
-            CKEDITOR.remove(CKEDITOR.instances['Html']);
-        }
-        CKEDITOR.replace('Html', { height: 400 });
-    </script>
-}
