--- a/GE.WebAdmin/Views/MaterialCategories/Edit.cshtml
+++ b/GE.WebAdmin/Views/MaterialCategories/Edit.cshtml
@@ -19,7 +19,7 @@
 <br />
 <form method="post" action="@Url.Action(MVC.MaterialCategories.Edit())">
     @Html.AntiForgeryToken()
-    @if (!isNew)
+    @if (!isNew && !User.IsInRole("architect"))
     {
         @Html.HiddenFor(x => x.Id)
     }
@@ -27,8 +27,9 @@
     @Html.HiddenFor(x => x.ParentCategoryId)
     @Html.HiddenFor(x => x.ModelCoreType)
 
-    @if (isNew)
+    @if (!isNew && User.IsInRole("architect"))
     {
+        <input type="hidden" name="OldId" value="@Model.Id"/>
         <div class="row">
             <div class="col-md-12">
                 @Html.LabelFor(x => x.Id, new { @class = "control-label" })
