--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -316,7 +316,15 @@
                                 @if (User.IsInRole("admin"))
                                 {
                                     <li>
-                                        <a href="@Url.Action(MVC.Aphorisms.Index())">Афоризмы</a>
+                                        <a href="#"><i class="fa fa-smile-o"></i> Афоризмы <span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="@Url.Action(MVC.Aphorisms.Index())">Каталог афоризмов</a>
+                                            </li>
+                                            <li>
+                                                <a href="@Url.Action(MVC.MaterialCategories.Index(mct: SX.WebCore.Enums.ModelCoreType.Aphorism))">Категории афоризмов</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 }
                                 <li>
