--- a/GE.WebAdmin/Views/VideoLinks/_GridViewNotLinked.cshtml
+++ b/GE.WebAdmin/Views/VideoLinks/_GridViewNotLinked.cshtml
@@ -16,7 +16,7 @@
                 Data = Model,
                 Columns = new SxExtantions.SxGridViewColumn<VMVideo>[]{
             new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Title", Caption="Название видео"},
-            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Url", Caption="Адрес"}
+            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="VideoId", Caption="Идентификатор"}
         },
                 PagerInfo = pagerInfo,
                 Filter = filter,
