--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model VMEditAphorism
 @{
-    var isNew = Model.Id==0;
+    var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить афоризм" : "Редактировать афоризм \"" + Model.Title + "\"";
 }
 
@@ -18,26 +18,26 @@
     @Html.HiddenFor(x => x.Id)
     @Html.HiddenFor(x => x.CategoryId)
 
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.Title, new { @class = "control-label" })
-            @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок" } })
-            @Html.ValidationMessageFor(x => x.Title)
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+        @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок" } })
+        @Html.ValidationMessageFor(x => x.Title)
     </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.Html, new { @class = "control-label" })
-            @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите содержание" } })
-            @Html.ValidationMessageFor(x => x.Html)
-        </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.Author, new { @class = "control-label" })
+        @Html.EditorFor(x => x.Author, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите автора (если есть)" } })
+        @Html.ValidationMessageFor(x => x.Author)
     </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
-            @Html.ActionLink("Назад", MVC.Aphorisms.Index(curCat: Model.CategoryId), new { @class = "btn btn-default" })
-        </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.Html, new { @class = "control-label" })
+        @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите содержание" } })
+        @Html.ValidationMessageFor(x => x.Html)
+    </div>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
+        @Html.ActionLink("Назад", MVC.Aphorisms.Index(curCat: Model.CategoryId), new { @class = "btn btn-default" })
     </div>
 </form>
