--- a/GE.WebUI/Content/less/video.less
+++ b/GE.WebUI/Content/less/video.less
@@ -3,71 +3,70 @@
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    display: table;
+}
+
+.video > .v-p-wr {
+    height: 100%;
+    width: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.video > .v-p-wr:hover > a, .list-video > figure > .l-v-wr:hover > a {
+    color: #bc1919;
+}
+
+.video > .v-p-wr > a, .list-video > figure > .l-v-wr > a {
+    color: rgba(0,0,0,0.6);
+    transition: all 0.1s;
+
+    @media (max-width: @screen-xs-max) {
+        font-size: 35px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        font-size: 35px;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        font-size: 45px;
+    }
+
+    @media (min-width: @screen-lg-min) {
+        font-size: 45px;
+    }
+}
+
+//list video
+.list-video {
+    height: 150px;
     position: relative;
 }
 
-.video > .wrapper {
-    padding: 0;
-}
 
-.video img {
-    max-width: 100%;
-}
 
-.video figcaption {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
-    background-color: @color-game-menu;
-    font-style: italic;
-    font-size: 11px;
-    color: @color-white;
-    text-transform:uppercase;
-    font-weight:700;
-}
-
-.video figcaption > .source, .video figcaption > .count{
-    text-transform:none;
-    font-weight:normal;
-}
-.video figcaption > .source > a{
-    color:@color-white;
-    text-decoration:underline;
-}
-
-.video .button-wrapper {
+.list-video > figure {
     position: absolute;
     width: 100%;
     height: 100%;
-}
-
-.video .button-wrapper > .button-container {
     display: table;
-    width: 100%;
-    height: 100%;
+    background-size: cover;
+    background-position: center center;
 }
 
-.video .button-wrapper > .button-container > .button-cell {
-    display: table-cell;
-    height: 100%;
-    vertical-align: middle;
-}
-
-.video .button-wrapper > .button-container > .button-cell > a {
-    width: 40px;
-    height: 40px;
-    margin: 0 auto;
-    display: block;
-}
-
-.video .button-wrapper > .button-container > .button-cell > a > i {
-    font-size: 3em;
-    color: rgba(214,33,33,.8);
-    transition:all 0.2s;
-}
-
-.video .button-wrapper > .button-container > .button-cell > a > i:hover {
-    color: rgba(214,33,33,1);
+.list-video > figure > .l-v-wr {
+    display:table-cell;
+    height:100%;
+    width:100%;
+    vertical-align:middle;
+    text-align:center;
 }
