--- a/GE.WebAdmin/Views/Aphorisms/Index.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Index.cshtml
@@ -8,7 +8,7 @@
 <br />
 
 <div class="panel panel-default">
-    <div class="panel-heading"><h4>Категории афоризмов</h4></div>
+    <div class="panel-heading"><b>Категории афоризмов</b></div>
     <div class="panel-body" style="max-height:200px; overflow:hidden; overflow-y:auto;">
         @Html.Action(MVC.MaterialCategories.TreeViewMenu(mct: SX.WebCore.Enums.ModelCoreType.Aphorism))
     </div>
