--- a/GE.WebUI/Content/less/video.less
+++ b/GE.WebUI/Content/less/video.less
@@ -21,11 +21,11 @@
     text-align: center;
 }
 
-.video > .v-p-wr:hover > a, .list-video > figure > .l-v-wr:hover > a {
+.video > .v-p-wr:hover > a {
     color: #bc1919;
 }
 
-.video > .v-p-wr > a, .list-video > figure > .l-v-wr > a {
+.video > .v-p-wr > a {
     color: rgba(0,0,0,0.6);
     transition: all 0.1s;
 
@@ -48,25 +48,20 @@
 
 //list video
 .list-video {
-    height: 150px;
     position: relative;
-}
+    @media (max-width: @screen-xs-max) {
+        height: 150px;
+    }
 
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        height: 150px;
+    }
 
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        height: 150px;
+    }
 
-.list-video > figure {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: table;
-    background-size: cover;
-    background-position: center center;
-}
-
-.list-video > figure > .l-v-wr {
-    display:table-cell;
-    height:100%;
-    width:100%;
-    vertical-align:middle;
-    text-align:center;
+    @media (min-width: @screen-lg-min) {
+        height: 150px;
+    }
 }
