--- a/GE.WebUI/Views/Shared/_SocialIconsMenu.cshtml
+++ b/GE.WebUI/Views/Shared/_SocialIconsMenu.cshtml
@@ -6,13 +6,10 @@
         <a href="https://www.facebook.com/groups/792476727555167/"><span class="fa fa-facebook"></span></a>
     </li>
     <li>
-        <a href="#"><span class="fa fa-twitter"></span></a>
+        <a href="https://twitter.com/Ya_Dobrii_Panda"><span class="fa fa-twitter"></span></a>
     </li>
     <li>
-        <a href="#"><span class="fa fa-instagram"></span></a>
-    </li>
-    <li>
-        <a href="#"><span class="fa fa-youtube-play"></span></a>
+        <a href="https://www.youtube.com/channel/UCnNNDFj49gLAbljBF_e9AbQ"><span class="fa fa-youtube-play"></span></a>
     </li>
     <li>
         <a href="https://vk.com/panda_online_game_news"><span class="fa fa-vk"></span></a>
