--- a/GE.WebUI/Views/Articles/List.cshtml
+++ b/GE.WebUI/Views/Articles/List.cshtml
@@ -23,26 +23,6 @@
 
 @section scripts{
     <script type="text/javascript">
-        var tag = document.createElement('script');
-
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-        var player;
-
-        function onPlayerReady(event) {
-            event.target.playVideo();
-        }
-
-        function playVideoById(id, videoId) {
-            player = new YT.Player(id, {
-                videoId: videoId,
-                events: {
-                    'onReady': onPlayerReady
-                }
-            });
-        }
-
+        loadScriptOnce('https://www.youtube.com/iframe_api');
     </script>
 }
