--- a/GE.WebAdmin/Views/News/Edit.cshtml
+++ b/GE.WebAdmin/Views/News/Edit.cshtml
@@ -5,6 +5,7 @@
     ViewBag.GameTitle = isNew || !Model.GameId.HasValue ? null : Model.Game.Title;
     ViewBag.MaterialCategoryTitle = isNew || Model.CategoryId == null ? null : Model.Category.Title;
     var uriFragmet = Request.QueryString.GetValues("fragment") != null ? Request.QueryString.GetValues("fragment")[0] : null;
+    var hasError = Convert.ToBoolean(ViewBag.HasError);
 }
 
 @section styles{
@@ -86,6 +87,10 @@
             </div>
             <br />
             }
+            else
+            {
+                @Html.HiddenFor(x=>x.TitleUrl)
+            }
             <div class="row">
                 <div class="col-md-3">
                     @Html.LabelFor(x => x.GameId, new { @class = "control-label" })
@@ -142,7 +147,7 @@
             </div>
         </form>
     </div>
-    @if (User.IsInRole("seo") && !isNew)
+    @if (User.IsInRole("seo") && !isNew && !hasError)
     {
         <div role="tabpanel" class="tab-pane" id="tags-cloud">
             <div class="row">
@@ -163,7 +168,7 @@
             </div>
         </div>
     }
-    @if (User.IsInRole("video-redactor") && !isNew)
+    @if (User.IsInRole("video-redactor") && !isNew && !hasError)
     {
         <div role="tabpanel" id="videos" class="tab-pane @(uriFragmet=="videos"? "active":null)">
             @Html.Partial(MVC.Shared.Views._NotMaterialVideos, Model)
