--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -11,7 +11,7 @@ footer {
     bottom:0;
     width:100%;
 
-    @media (max-width: @screen-xs-max) {
+    /*@media (max-width: @screen-xs-max) {
         background-image: url(../i/footer-bg-xs.jpg);
         background-size: 100% 100%;
     }
@@ -27,7 +27,7 @@ footer {
 
     @media (min-width: @screen-lg-min) {
         background-image: url(../i/footer-bg-lg.jpg);
-    }
+    }*/
 }
 
 footer a, footer a:hover, footer a:focus {
