--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -330,6 +330,9 @@
                                             <li>
                                                 <a href="@Url.Action(MVC.MaterialCategories.Index(mct: SX.WebCore.Enums.ModelCoreType.Aphorism))">Категории афоризмов</a>
                                             </li>
+                                            <li>
+                                                <a href="@Url.Action(MVC.AuthorAphorisms.Index())">Авторы афоризмов</a>
+                                            </li>
                                         </ul>
                                     </li>
                                 }
