--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -2,6 +2,7 @@
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить афоризм" : "Редактировать афоризм \"" + Model.Title + "\"";
+    ViewBag.AuthorAphorism = isNew || Model.AuthorId==0 ? null : Model.Author.Name;
 }
 
 <h2>@ViewBag.Title</h2>
@@ -25,9 +26,9 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(x => x.Author, new { @class = "control-label" })
-        @Html.EditorFor(x => x.Author, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите автора (если есть)" } })
-        @Html.ValidationMessageFor(x => x.Author)
+        @Html.LabelFor(x => x.AuthorId, new { @class = "control-label" })
+        @Html.EditorFor(x => x.AuthorId, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(x => x.AuthorId)
     </div>
 
     <div class="form-group">
