--- a/GE.WebUI/Content/less/aphorisms.less
+++ b/GE.WebUI/Content/less/aphorisms.less
@@ -33,25 +33,38 @@
     margin-top:@def-pad*2;
     margin-bottom:@def-pad*2;
 }
-.ap-author-list, .ap-category-list {
+
+.ap-page blockquote
+{
+    min-height:100px;
+}
+
+.ap-page .author-img{
+    max-height:70px;
+    border:3px solid @colr-muted-blue;
+    margin-right:@def-pad*2;
+    margin-bottom:@def-pad*2;
+    float: left;
+}
+.ap-list{
     margin-top: @def-pad*4;
 }
 
-.ap-author-list ul, .ap-category-list ul {
+.ap-list ul{
     list-style: none;
     color: @color-white;
     padding: 0;
     margin: 0;
 }
 
-.ap-author-list ul > li, .ap-category-list > ul > li {
+.ap-list ul > li {
     margin-top: @def-pad*2;
 }
 
-.ap-author-list h3, .ap-category-list h3 {
+.ap-list h3 {
     font-size: 16px;
 }
 
-.ap-author-list ul > li a, .ap-category-list > ul > li a {
+.ap-list ul > li a {
     color: @colr-muted-blue;
 }
