--- a/GE.WebUI/Views/Aphorisms/Details.cshtml
+++ b/GE.WebUI/Views/Aphorisms/Details.cshtml
@@ -9,46 +9,23 @@
 
 <div class="ap-page">
     <blockquote style="color:white;">
+        @if(Model.Aphorism.Author!=null && Model.Aphorism.Author.PictureId.HasValue)
+        {
+            <img class="author-img img-circle" alt="@Model.Aphorism.Author.Name" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.Aphorism.Author.PictureId))"/>
+        }
         @Model.Aphorism.Html
-        <h4 class="small">@(Model.Aphorism.Author ?? "Аноним")</h4>
+        <h4 class="small">@(Model.Aphorism.Author!=null ? Model.Aphorism.Author.Name: "Аноним")</h4>
     </blockquote>
 
     @*author*@
     @if (Model.TopForAuthor.Any())
     {
-        <div class="ap-author-list">
-            <h2 class="header">@(Model.Aphorism.Author ?? "Аноним"). Другие высказывания</h2>
-
-            <ul>
-                @for (int i = 0; i < Model.TopForAuthor.Length; i++)
-            {
-                var a = Model.TopForAuthor[i];
-            <li>
-                <h3><a href="@Url.Action(MVC.Aphorisms.Details(categoryId: a.CategoryId, titleUrl: a.TitleUrl))">@a.Title</a></h3>
-                <div>@a.Html</div>
-            </li>
-            }
-            </ul>
-
-        </div>
+        @Html.Partial(MVC.Aphorisms.Views._List, Model.TopForAuthor, new ViewDataDictionary { { "Author", Model.Aphorism.Author } })
     }
 
     @*category*@
     @if (Model.TopForCategory.Any())
     {
-        <div class="ap-category-list">
-            <h2 class="header">Другие высказывания в категории @Model.Aphorism.Category.Title</h2>
-
-            <ul>
-                @for (int i = 0; i < Model.TopForCategory.Length; i++)
-            {
-                var a = Model.TopForCategory[i];
-            <li>
-                <h3><a href="@Url.Action(MVC.Aphorisms.Details(categoryId: a.CategoryId, titleUrl: a.TitleUrl))">@a.Title</a></h3>
-                <div>@a.Html</div>
-            </li>
-            }
-            </ul>
-        </div>
+        @Html.Partial(MVC.Aphorisms.Views._List, Model.TopForCategory, new ViewDataDictionary { { "Category", Model.Aphorism.Category.Title } })
     }
 </div>
