--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -31,6 +31,9 @@
                 <li>
                     <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
                 </li>
+                <li>
+                    <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 @if (User.Identity.IsAuthenticated)
