--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -17,6 +17,9 @@
                         <li>
                             <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
                         </li>
+                        <li>
+                            <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6">
@@ -39,6 +42,9 @@
                         </li>
                         <li>
                             <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы</a>
                         </li>
                     </ul>
                 </div>
